src/apps/snapshots/handlr__apps__user__tests__remove_handlers_expand_wildcards.snap
---
source: src/apps/user.rs
expression: "String::from_utf8(buffer)?"
---
[Default Applications]
text/*=nvim.desktop;
text/cache-manifest=nvim.desktop;
text/calendar=nvim.desktop;
text/coffeescript=nvim.desktop;
text/css=nvim.desktop;
text/csv=nvim.desktop;
text/html=nvim.desktop;
text/jade=nvim.desktop;
text/jsx=nvim.desktop;
text/less=nvim.desktop;
text/markdown=nvim.desktop;
text/mathml=nvim.desktop;
text/mdx=nvim.desktop;
text/n3=nvim.desktop;
text/plain=nvim.desktop;
text/prs.lines.tag=nvim.desktop;
text/richtext=nvim.desktop;
text/rtf=nvim.desktop;
text/sgml=nvim.desktop;
text/shex=nvim.desktop;
text/slim=nvim.desktop;
text/spdx=nvim.desktop;
text/stylus=nvim.desktop;
text/tab-separated-values=nvim.desktop;
text/troff=nvim.desktop;
text/turtle=nvim.desktop;
text/uri-list=nvim.desktop;
text/vcard=nvim.desktop;
text/vnd.curl=nvim.desktop;
text/vnd.curl.dcurl=nvim.desktop;
text/vnd.curl.mcurl=nvim.desktop;
text/vnd.curl.scurl=nvim.desktop;
text/vnd.dvb.subtitle=nvim.desktop;
text/vnd.familysearch.gedcom=nvim.desktop;
text/vnd.fly=nvim.desktop;
text/vnd.fmi.flexstor=nvim.desktop;
text/vnd.graphviz=nvim.desktop;
text/vnd.in3d.3dml=nvim.desktop;
text/vnd.in3d.spot=nvim.desktop;
text/vnd.sun.j2me.app-descriptor=nvim.desktop;
text/vnd.wap.wml=nvim.desktop;
text/vnd.wap.wmlscript=nvim.desktop;
text/vtt=nvim.desktop;
text/x-asm=nvim.desktop;
text/x-c=nvim.desktop;
text/x-component=nvim.desktop;
text/x-fortran=nvim.desktop;
text/x-handlebars-template=nvim.desktop;
text/x-java-source=nvim.desktop;
text/x-lua=nvim.desktop;
text/x-markdown=nvim.desktop;
text/x-nfo=nvim.desktop;
text/x-opml=nvim.desktop;
text/x-org=nvim.desktop;
text/x-pascal=nvim.desktop;
text/x-processing=nvim.desktop;
text/x-sass=nvim.desktop;
text/x-scss=nvim.desktop;
text/x-setext=nvim.desktop;
text/x-sfv=nvim.desktop;
text/x-suse-ymp=nvim.desktop;
text/x-uuencode=nvim.desktop;
text/x-vcalendar=nvim.desktop;
text/x-vcard=nvim.desktop;
text/xml=nvim.desktop;
text/yaml=nvim.desktop;
